# uv-agent

./: .gitignore  AGENTS.md  AGENTS.python.md  GOAL_MODE_IMPLEMENTATION.md  HELPER_SURFACE_PROPOSAL.md  LICENSE  PENDING_SEND_QUEUE_REFACTOR.md  PLUGIN_REFACTOR_PLAN.md  PLUGIN_SQLITE_IMPLEMENTATION_PLAN.md  README.md  README.zh-CN.md  REFACTORING.md  REFACTOR_CHECKLIST.md  REFACTOR_PLAN.md  RUNTIME_HTTP_TRANSPORT_PLAN.md  RUNTIME_PERFORMANCE_REFACTOR.md  TUI_REFACTOR_CHECKLIST.md  TY_CHECK_REAL_ISSUES.md  main.py  pyproject.toml  pyrightconfig.json  rich-transcript-renderables-plan.md
.github/workflows/: ci.yml  release-uv-agentx.yml  release.yml
docs/: config.example.json  configuration.md  design.md  plugins.md  runtime.md  tui.md
scripts/: bump_version.py
src/uv_agent/: __init__.py  agent.py  app_factory.py  atomic.py  attachments.py  billing.py  blobs.py  cli.py  clipboard.py  compaction.py  config.py  context.py  context_builder.py  daemon.py  environment.py  errors.py  goal_mode.py  helper_calls.py  host_events.py  i18n.py  ids.py  jsonl.py  logging_config.py  mcp_config.py  mcp_probe.py  model_anthropic.py  model_chat.py  model_client.py  model_http.py  model_responses.py  notifications.py  paths.py  project_rules.py  prompts.py  scheduler.py  skills.py  state_db.py  telemetry.py  thread_titles.py  turn_manager.py  (+3 more)
src/uv_agent/agent/: __init__.py  compaction.py  context_builder.py  engine.py  messages.py  prompts.py  tool_results.py
src/uv_agent/builtin/: __init__.py  goal.py  mcp.py  scheduler.py  skills.py  workflow.py  worktree.py
src/uv_agent/model/: __init__.py  anthropic.py  chat.py  client.py  content.py  openai_sdk.py  responses.py  sdk.py  types.py
src/uv_agent/plugins/: __init__.py  api.py  context.py  errors.py  events.py  helpers.py  hookspecs.py  i18n.py  manager.py  registry.py  resources.py  storage.py  summary.py  xml.py
src/uv_agent/runner/: __init__.py  events.py  metadata.py  models.py  (+6 more)
src/uv_agent_runtime/: __init__.py  codequery.py  codesearch.py  cwd.py  dependencies.py  errors.py  events.py  facade.py  files.py  goal_mode.py  helper_stats.py  helper_tracking.py  lockfile.py  mcp.py  patch.py  process.py  resources.py  scheduler.py  scripts.py  subagent.py  textops.py  threads.py  transport.py  ui.py  vision.py  workflow.py
tests/: conftest.py  test_agent.py  test_atomic.py  test_config.py  test_daemon.py  test_helper_calls.py  test_host_events.py  test_lazy_imports.py  test_logging_config.py  test_mcp_config.py  test_mcp_probe.py  test_metadata.py  test_model_client.py  test_notifications.py  test_plugin_boundaries.py  test_plugins.py  test_project_rules.py  test_runner.py  test_runner_rpc.py  test_runtime.py  test_scheduler.py  test_session_store.py  test_skills.py  test_state_db.py  test_telemetry.py  test_tui.py  test_tui2.py  test_tui2_streaming.py  test_tui_streaming.py  test_turn_manager.py  test_workflow_executor.py  test_workflow_runtime.py  test_worktree.py
tests/fixtures/: mcp_echo_server.py
(+63 files in other folders)
