[project]
name = "uv-agent"
version = "0.3.2"
description = "Experimental Python-runner coding agent with a Textual TUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.36.0",
    "pillow>=12.0.0",
    "textual>=6.5.0",
]

[project.urls]
Repository = "https://github.com/4fuu/uv-agent"

[project.scripts]
uv-agent = "uv_agent.cli:main"

[dependency-groups]
dev = ["pytest>=9.0.0", "pytest-asyncio>=1.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uv_agent", "src/uv_agent_runtime"]
