[project]
name = "uv-agent"
version = "0.8.3"
description = "Experimental Python-runner coding agent with a Textual TUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.103.1",
    "mcp>=1.27.1",
    "openai>=2.36.0",
    "pillow>=12.0.0",
    "pygments>=2.20.0",
    "textual>=6.5.0",
    "textual-image[textual]>=0.12.0",
    "tomlkit>=0.15.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=1.8.1",
    "unidiff>=0.7.5",
    "watchfiles>=1.1.1",
]

[project.urls]
Repository = "https://github.com/4fuu/uv-agent"

[project.scripts]
uv-agent = "uv_agent.cli:main"

[dependency-groups]
dev = ["pytest>=9.0.0", "pytest-asyncio>=1.3.0"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Image\\.Image\\.getdata is deprecated.*:DeprecationWarning:textual_image\\._pixeldata",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uv_agent", "src/uv_agent_runtime"]
