[project]
name = "uv-agent"
version = "0.20.0"
description = "Experimental Python-runner coding agent with a terminal TUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.103.1",
    "fff-search>=0.9.6",
    "mcp>=1.27.1",
    "openai>=2.36.0",
    "pillow>=12.0.0",
    "pygments>=2.20.0",
    "rich>=14.0.0",
    "tomlkit>=0.15.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=1.8.1,<1.9",
    "unidiff>=0.7.5",
    "watchfiles>=1.1.1",
]

[project.urls]
Repository = "https://github.com/4fuu/uv-agent"

[project.scripts]
uv-agent = "uv_agent.cli:main"

[project.entry-points."uv_agent.plugins"]
builtin_goal = "uv_agent.builtin.goal:plugin"
builtin_worktree = "uv_agent.builtin.worktree:plugin"
builtin_skills = "uv_agent.builtin.skills:plugin"
builtin_mcp = "uv_agent.builtin.mcp:plugin"
builtin_workflow = "uv_agent.builtin.workflow:plugin"
builtin_scheduler = "uv_agent.builtin.scheduler:plugin"

[dependency-groups]
dev = ["pytest>=9.0.0", "pytest-asyncio>=1.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uv_agent", "src/uv_agent_runtime"]
